<resources>
    <string name="app_name">Income Forecast</string>

    <!-- main fragment -->
    <string name="main_fragment_label">Forecast for current Month</string>
    <string name="salary_text_view">Income</string>
    <string name="salary_month_value">Month (%1$s): <b>€%2$s</b></string>
    <string name="salary_year_value">Year:  <b>€%1$s</b></string>
    <string name="expense_text_view">Expense</string>
    <string name="expense_month_value">Month: <b>€%1$s</b></string>
    <string name="expense_year_values">Year:  <b>€%1$s</b></string>

    <string name="by_category">By category:</string>
    <string name="to_add_expense"><u>Add expenses</u></string>
    <string name="start_next_month_btn"><u>Start next month</u></string>
    <string name="history_of_current_month_btn"><u>View in details</u></string>
    <string name="expense_input">Expense</string>
    <string name="go_to_history"><u>Go to history</u></string>

    <string name="forecast_value">According to your data, you will earn €%1$s and spend €%2$s by the end of the year. Your final income will be €%3$s.</string>

    <!-- new month fragment -->
    <string name="nem_month_label">New Month</string>
    <string name="salary_input">Enter your salary</string>
    <string name="start_new_month">Start</string>

    <!-- history fragment -->
    <string name="history_fragment_label">History</string>
    <string name="earned_text_view_history_fragment">Earned on <i>%1$s %2$s</i>: <b>€%3$s</b></string>
    <string name="forecast_text_view_history_fragment">Forecast: <b>€%1$s</b></string>
    <string name="expenses_text_view_history_fragment">Spent: <b>€%1$s</b></string>

    <!-- month expenses fragment -->
    <string name="current_month_history_fragment_label">Expenses history</string>
    <string name="current_month_expense_date">Date: %1$s</string>
    <string name="current_month_spent">Spent: €%1$s</string>
    <string name="current_month_expense_category">Category: %1$s</string>

    <!-- new expenses fragment -->
    <string name="new_expenses_fragment_label">New expenses</string>
    <string name="expense_amount_label">Amount:</string>
    <string name="expense_category_label">Category:</string>
    <string name="not_enough_category">Not enough categories? Create new!</string>
    <string name="add_category_btn">Add</string>

    <!-- menu -->
    <string name="menu_history">History</string>
</resources>