<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewExpense">

    <TextView
        android:id="@+id/expenseAmountLabel"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/expense_amount_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/expenseInput"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/expenseAmountLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expenseCategoryLabel"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/expense_category_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expenseAmountLabel" />

    <Spinner
        android:id="@+id/categoriesSelect"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/expenseCategoryLabel"
        app:layout_constraintTop_toBottomOf="@id/expenseInput" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addExpenseBtn"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/baseline_add_24"
        app:backgroundTint="@color/design_default_color_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expenseCategoryLabel"
        app:tint="#000000" />

    <TextView
        android:id="@+id/notEnoughCategoriesTw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/not_enough_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addExpenseBtn" />

    <EditText
        android:id="@+id/categoryInput"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notEnoughCategoriesTw" />

    <Button
        android:id="@+id/addCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_category_btn"
        app:layout_constraintStart_toEndOf="@id/categoryInput"
        app:layout_constraintTop_toBottomOf="@id/notEnoughCategoriesTw" />

</androidx.constraintlayout.widget.ConstraintLayout>